# mondaytoframe

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  release.yml
api/: index.html
contributing/: index.html
docs/: api.md
search/: search_index.json
src/mondaytoframe/: __init__.py  io.py  model.py  model_manual.py  parsers_for_frame.py  parsers_for_monday.py
tests/: conftest.py  test_init.py  test_io.py  test_parsers_for_frame.py  test_parsers_for_monday.py
