[project]
name = "mondaytoframe"
version = "0.1.0"
description = "This python package helps converting data between the Monday API and Dataframes"
readme = "README.md"
authors = [
    { name = "Bouke Postma", email = "33422940+boukepostma@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "monday>=2.0.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "datamodel-code-generator[graphql,http]>=0.27.2",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.mypy]
mypy_path = "src"
files = ["src/mondaytoframe", "tests"]
strict = true
ignore_missing_imports = true
exclude = ["src/mondaytoframe/model.py"]
plugins = ['pydantic.mypy']
disable_error_code = [
    "no-untyped-def",  # Ignore missing type annotations for functions
]

[tool.ruff]
exclude = ["src/mondaytoframe/model.py"]
